# duckdb

./: .gitignore  CMakeLists.txt
.github/config/extensions/: postgres_scanner.cmake
extension/: extension_config.cmake
extension/autocomplete/: keyword_map.cpp  matcher.cpp
extension/autocomplete/include/: inlined_grammar.hpp  matcher.hpp
extension/core_functions/: function_list.cpp
extension/jemalloc/: CMakeLists.txt  jemalloc_extension.cpp
extension/json/: json_multi_file_info.cpp  json_reader.cpp
extension/json/include/: json_common.hpp  json_multi_file_info.hpp  json_reader.hpp  json_scan.hpp
extension/json/json_functions/: json_extract.cpp  json_keys.cpp  json_structure.cpp  json_table_in_out.cpp  json_transform.cpp
extension/parquet/: column_reader.cpp  parquet_multi_file_info.cpp  parquet_reader.cpp
src/: CMakeLists.txt
src/catalog/: catalog.cpp  catalog_search_path.cpp
src/common/: allocator.cpp  enum_util.cpp  exception_format_value.cpp  hive_partitioning.cpp  settings.json  string_util.cpp  symbols.cpp
src/execution/: aggregate_hashtable.cpp  column_binding_resolver.cpp
src/function/: function_list.cpp  table_function.cpp
src/main/: client_context.cpp  config.cpp  connection.cpp  database_manager.cpp  query_profiler.cpp
src/optimizer/: aggregate_function_rewriter.cpp  optimizer.cpp
src/parallel/: executor.cpp  meta_pipeline.cpp
src/parser/: base_expression.cpp  transformer.cpp
src/planner/: bind_context.cpp  bound_parameter_map.cpp  planner.cpp
src/storage/: storage_lock.cpp
test/helpers/: test_config.cpp
(+162 files in other folders)
